--- a/txr-system-ui/package.json
+++ b/txr-system-ui/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest-cucumber": "^2.0.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.9.0",
+    "sinon": "^7.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
