--- a/Txr-system/Jenkinsfile
+++ b/Txr-system/Jenkinsfile
@@ -2,7 +2,28 @@
 
 node {
 
-    stage 'Clone the project'
-    git 'https://github.com/eugenp/tutorials.git'
+    stage 'checkout'
+    git 'https://github.com/nagabhushanamn/airbus-automation'
+    
+    dir('Txr-system') {
+    	stage("compile and analysis") {
+
+    	    parallel 'Compilation': {
+                sh "./mvnw clean install -DskipTests"
+            }, 
+            'Static Analysis': {
+                stage("Checkstyle") {
+                    sh "./mvnw checkstyle:checkstyle"
+                    step([$class: 'CheckStylePublisher',
+                      canRunOnFailed: true,
+                      defaultEncoding: '',
+                      healthy: '100',
+                      pattern: '**/target/checkstyle-result.xml',
+                      unHealthy: '90',
+                      useStableBuildAsReference: true
+                    ])
+                }
+    	}
+    }
    
 }
