--- a/Txr-system/Jenkinsfile
+++ b/Txr-system/Jenkinsfile
@@ -25,5 +25,34 @@ node {
                 }    
     	    }
         }
+        stage("Tests and Deployment") {
+            parallel 'Unit tests': {
+                stage("Runing unit tests") {
+                    try {
+                        sh "./mvnw test -Punit"
+                    } catch(err) {
+                        step([$class: 'JUnitResultArchiver', testResults: 
+                          '**/target/surefire-reports/TEST-*UnitTest.xml'])
+                        throw err
+                    }
+                   step([$class: 'JUnitResultArchiver', testResults: 
+                     '**/target/surefire-reports/TEST-*UnitTest.xml'])
+                }
+            }, 'Integration tests': {
+                stage("Runing integration tests") {
+                    try {
+                        sh "./mvnw test -Pintegration"
+                    } catch(err) {
+                        step([$class: 'JUnitResultArchiver', testResults: 
+                          '**/target/surefire-reports/TEST-'
+                            + '*IntegrationTest.xml'])
+                        throw err
+                    }
+                    step([$class: 'JUnitResultArchiver', testResults: 
+                      '**/target/surefire-reports/TEST-'
+                        + '*IntegrationTest.xml'])
+                }
+            }
+        }    
     }
 }    
