--- a/Txr-system/Jenkinsfile
+++ b/Txr-system/Jenkinsfile
@@ -6,7 +6,8 @@ node {
     git 'https://github.com/nagabhushanamn/airbus-automation'
     
     dir('Txr-system') {
-    	stage("compile and analysis") {
+    	
+        stage("compile and analysis") {
 
     	    parallel 'Compilation': {
                 sh "./mvnw clean install -DskipTests"
@@ -25,32 +26,30 @@ node {
                 }    
     	    }
         }
-        stage("Tests and Deployment") {
+        stage("tests") {
             parallel 'Unit tests': {
-                stage("Runing unit tests") {
+                stage("unit tests") {
                     try {
                         sh "./mvnw test -Punit"
                     } catch(err) {
                         step([$class: 'JUnitResultArchiver', testResults: 
-                          '**/target/surefire-reports/TEST-*UnitTest.xml'])
+                          '**/target/surefire-reports/TEST-*.xml'])
                         throw err
                     }
                    step([$class: 'JUnitResultArchiver', testResults: 
-                     '**/target/surefire-reports/TEST-*UnitTest.xml'])
+                     '**/target/surefire-reports/TEST-*.xml'])
                 }
             }, 'Integration tests': {
-                stage("Runing integration tests") {
+                stage("integration tests") {
                     try {
                         sh "./mvnw test -Pintegration"
                     } catch(err) {
                         step([$class: 'JUnitResultArchiver', testResults: 
-                          '**/target/surefire-reports/TEST-'
-                            + '*IntegrationTest.xml'])
+                          '**/target/surefire-reports/TEST-*.xml'])
                         throw err
                     }
                     step([$class: 'JUnitResultArchiver', testResults: 
-                      '**/target/surefire-reports/TEST-'
-                        + '*IntegrationTest.xml'])
+                      '**/target/surefire-reports/TEST-*.xml'])
                 }
             }
         }    
