--- a/Txr-system/Jenkinsfile
+++ b/Txr-system/Jenkinsfile
@@ -52,7 +52,7 @@ node {
             }
         }
         stage("staging") {
-                sh 'pid=\$(lsof -i:8181 -t); [ -z "$pid" ] && echo "Empty" || kill -TERM \$pid'
+                sh 'pid=\$(lsof -i:8181 -t); [ -z "\$pid" ] && echo "Empty" || kill -TERM \$pid'
                 withEnv(['JENKINS_NODE_COOKIE=dontkill']) {
                     sh 'nohup ./mvnw spring-boot:run -Dserver.port=8181 &'
                 }   
