--- a/Txr-system-UI/Jenkinsfile
+++ b/Txr-system-UI/Jenkinsfile
@@ -1,6 +1,23 @@
 
 
-node {
-    stage 'checkout'
-    git 'https://github.com/nagabhushanamn/airbus-automation'
+pipeline {
+    
+    agent {
+        docker {
+            image 'node:10.16-alpine' 
+            args '-p 3000:3000' 
+        }
+    }
+    git branch: 'master',
+        url: 'https://github.com/nagabhushanamn/airbus-automation'
+    
+    dir("Txr-system-UI") {
+        stages {
+            stage('build') { 
+                steps {
+                    sh 'npm install' 
+                }
+            }
+        }
+    }
 }
