--- a/Txr-system-UI/Jenkinsfile
+++ b/Txr-system-UI/Jenkinsfile
@@ -7,6 +7,9 @@ pipeline {
             args '-p 3000:3000' 
         }
     }
+    environment {
+        HOME = '.'
+    }
     stages {
         stage('build') { 
                 steps {
