--- a/Txr-system-UI/Jenkinsfile
+++ b/Txr-system-UI/Jenkinsfile
@@ -5,18 +5,10 @@ pipeline {
     stages {
         stage('install dependencies') { 
                 steps {
-                    sh 'npm install' 
+                    dir('Txr-system-UI') {
+                        sh 'npm install' 
+                    }
                 }
             }
-        stage('test') { 
-                steps {
-                    sh 'npm test' 
-                }
-            }
-        stage('build') { 
-                steps {
-                    sh 'npm run build' 
-                }
-            }
-        }
+    }
 }
