--- a/Txr-system-UI/Jenkinsfile
+++ b/Txr-system-UI/Jenkinsfile
@@ -4,11 +4,18 @@ pipeline {
     agent any
     stages {
         stage('install dependencies') { 
-                steps {
-                    dir('Txr-system-UI') {
-                        sh 'npm install' 
-                    }
+            steps {
+                dir('Txr-system-UI') {
+                    sh 'npm install' 
                 }
             }
+        }
+        stage('test') { 
+            steps {
+                dir('Txr-system-UI') {
+                    sh 'npm test' 
+                }
+            }
+        }
     }
 }
