--- a/Txr-system-UI/package.json
+++ b/Txr-system-UI/package.json
@@ -5,17 +5,21 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "jest-cucumber": "^2.0.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
-    "react-scripts": "3.1.1",
-    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "sinon": "^7.4.2"
+    "redux-thunk": "^2.3.0"
+   
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest-cucumber": "^2.0.11",
+    "sinon": "^7.4.2",
+    "react-test-renderer": "^16.9.0",
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
   }
 }
