--- a/Txr-system-UI/Jenkinsfile
+++ b/Txr-system-UI/Jenkinsfile
@@ -13,7 +13,14 @@ pipeline {
         stage('test') { 
             steps {
                 dir('Txr-system-UI') {
-                    sh 'npm test' 
+                    
+                }
+            }
+        }
+        stage('build') { 
+            steps {
+                dir('Txr-system-UI') {
+                    sh 'npm run build' 
                 }
             }
         }
