--- a/Txr-system-UI/package.json
+++ b/Txr-system-UI/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
@@ -10,7 +11,6 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
-   
   },
   "devDependencies": {
     "redux-devtools-extension": "^2.13.8",
