--- a/Txr-system-UI/Jenkinsfile
+++ b/Txr-system-UI/Jenkinsfile
@@ -24,5 +24,12 @@ pipeline {
                 }
             }
         }
+        stage('Building image') {
+            steps{
+                script {
+                docker.build registry + ":$BUILD_NUMBER"
+                }
+            }
+        }
     }
 }
